# cramp

./: Cargo.toml  README.md  cramp_rule.md
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/cramp/: Cargo.toml
crates/cramp/src/: main.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: cargo.rs  converters.rs  error.rs  fs_utils.rs  lib.rs  lsp_codec.rs  models.rs  server.rs  toolbox.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
