[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["cupnfish@icloud.com"]

[workspace.dependencies]
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3" # For FuturesUnordered, StreamExt, SinkExt

serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
lsp-types = "0.97"
url = "2.3"

log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"

dashmap = "6.1"    # Concurrent HashMap
once_cell = "1.17"
uuid = "1.3"       # For Fix IDs

# Path handling
path-clean = "1.0"
pathdiff = "0.2"   # Relative paths

# Cargo interaction
cargo_metadata = "0.20" # Updated version

# FS utils
ignore = "0.4"  # File tree with .gitignore respect
similar = "2.2" # Diff generation

itertools = "0.14"

bytes = "1.4" # For codec


rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "db03f63" }

tracing = "0.1"

tokio = "1"
tracing-subscriber = "0.3"
clap = "4.5"
axum = { version = "0.8", features = ["macros"] }

arboard = "3.5"
crossterm = "0.29"
comrak = "0.39"    # Markdown parsing for documentation
syntect = "5.2"
scopeguard = "1.2"