[package]
name = "cramp-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
futures.workspace = true
futures-util.workspace = true                           # For FuturesUnordered, StreamExt, SinkExt

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
lsp-types.workspace = true
url.workspace = true

log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
thiserror.workspace = true

dashmap.workspace = true                                   # Concurrent HashMap
once_cell.workspace = true
uuid = { workspace = true, features = ["v4", "fast-rng"] } # For Fix IDs

# Path handling
path-clean.workspace = true
pathdiff.workspace = true   # Relative paths

# Cargo interaction
cargo_metadata.workspace = true # Updated version

# FS utils
ignore.workspace = true                               # File tree with .gitignore respect
similar = { workspace = true, features = ["inline"] } # Diff generation

itertools.workspace = true

bytes.workspace = true # For codec
